spacing fixed + icons chsnged to svg

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
+#services, #technologies, #aboutus, #contacts {
+    margin: 3rem auto;
+}
+
 a {
     text-decoration: none;
 }
@@ -31,6 +35,15 @@ header {
     opacity: 0.8;
     margin: 0;
     z-index: 0;
+}
+
+.lead {
+    font-weight: 400 !important;
+    margin-bottom: 3rem;
+}
+
+h3 {
+    margin: 2rem auto 3rem auto;
 }
 
 header h2 {
@@ -92,10 +105,12 @@ i {
 
 .hr-light {
     border-top: 2px solid #f4f4f4;
+    margin: 0.5rem auto 2rem auto;
 }
 
 .hr-dark {
     border-top: 1px solid #546882;
+    margin: 2rem auto 3rem auto;
 }
 
 .fa-leaf {
@@ -133,9 +148,9 @@ i {
     font-size: 1.5rem;
     text-decoration: none;
 }
-
-.social a i:hover {
-    text-shadow: 2px 2px 3px #333;
+.social svg {
+    width: 2rem;
+    margin: 0.5rem;
 }
 
 .contactForm {
@@ -182,6 +197,13 @@ footer {
     width: 100%;
 }
 
+@media only screen and (max-width: 995px) {
+    .social svg {
+        width: 1.5rem;
+    }
+}
+
+
 @media only screen and (max-width: 768px) {
     .navbar {
         opacity: 1;
@@ -191,8 +213,9 @@ footer {
         font-size: 2.5rem;
     }
 
-    .social a {
-
+    .social svg {
+        width: 2rem;
+        margin: 1rem;
     }
 
     header {
